added image and started making intro and about section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,56 @@
             </nav>
             <!-- Rest of the content -->
             <div id="content">
-
+                <div id="content-container" class="flex flex-col gap-10">
+                    <div id="content-home" class="flex flex-col justify-center items-center text-center mx-[20rem]">
+                        
+                    </div>
+                    <div id="content-home" class="flex flex-col justify-center items-center text-center mx-[20rem]">
+                        <div id="content-home-heading" class="text-4xl">Hi, Sumit here.</div>
+                        <div id="content-home-subheading" class="text-2xl">I code stuff and cook beats.</div>
+                        <div id="content-home-subheading" class="text-sm">I'm a student from Punjab, India.
+                            I like creating stuff, making music and released a track on all the streaming platforms.
+                        </div>
+                    </div>
+                    <div id="content-about" class="flex flex-col mx-[10rem] gap-5">
+                        <div id="content-about-heading" class="text-2xl">About</div>
+                        <div id="content-about-data" class="flex flex-row gap-4">
+                            <div id="content-about-details" class="flex flex-col text-sm basis-2/3 gap-4">
+                                <div id="content-about-details-p1">
+                                    I am currently a B. Tech CSE student at Lovely Professional University working on
+                                    skills
+                                    such as web development, 3D modeling and Data Analytics. At the same time, I am
+                                    undertaking a part-time Credit Linked Program in AI & ML from Daksh Gurukul, IIT
+                                    Guwahati.
+                                </div>
+                                <div id="content-about-details-p2" class="flex flex-col gap-2">
+                                    <div id="content-about-details-tech">
+                                        Here are some technologies I have been working with:
+                                    </div>
+                                    <div id="content-about-details-tech-list" class="flex flex-row gap-10">
+                                        <div id="content-about-details-tech-list1" class="">
+                                            <ul class="list-disc">
+                                                <li>Python</li>
+                                                <li>C++</li>
+                                                <li>Javascript</li>
+                                            </ul>
+                                        </div>
+                                        <div id="content-about-details-tech-list2">
+                                            <ul class="list-disc">
+                                                <li>Blender</li>
+                                                <li>React.js</li>
+                                                <li>Javascript</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="content-about-details" class="basis-1/3">
+                                <img src="/portfolio/img/sumit-photo.jpg" alt="" class="rounded-lg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
